--- a/hulsa/Resources.html
+++ b/hulsa/Resources.html
@@ -28,22 +28,25 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link current" href="#">HULSA Materials</a>
+            <a class="nav-link current" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Teaching Material</a>
+            <a class="nav-link" href="about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Codes, commentaries and explanatory notes</a>
+            <a class="nav-link" href="moot court.html">MOOT COURT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Bench books</a>
+            <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Laws</a>
+            <a class="nav-link" href="contact.html">CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Decision</a>
+            <a class="nav-link" href="gallery.html">GALLERY</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Materials.html">MATERIALS</a>
           </li>
         </ul>
       </div>
