added gallery and blog pages

--- a/hulsa/Competitions.html
+++ b/hulsa/Competitions.html
@@ -6,42 +6,66 @@
     <title>Competitions</title>
     <link rel="stylesheet" href="css/competitions.css" />
     <link rel="icon" href="images/icon.png" type="image/png" sizes="16x16" />
+    <link rel="icon" href="images/icon.png" type="image/png" sizes="16x16">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3078a9be4c.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html" class="">
-            <img
-              src="images/logooo.png"
-              alt="hulsa"
-              width="150px"
-              height="150px"
-              style="border-radius: 75px"
-            />
-          </a>
-        </div>
-        <div class="main-menu">
-          <ul>
-            <li>
-              <a href="Competitions.html">Moot Court</a>
-            </li>
-            <li>
-              <a href="#debates">Debates</a>
-            </li>
-            <li>
-              <a href="#Essay"> Essay Competitions</a>
-            </li>
-            <li>
-              <a href="#">Best Research Award</a>
-            </li>
-            <!-- <li>
-            <a href="#">Resources</a>
-          </li> -->
-          </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/"><img src="images/icon.png" style="height: 25px; width: auto; " alt=""></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item ">
+            <a class="nav-link current" href="index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="moot court.html">MOOT COURT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html">BLOG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">CONTACT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gallery.html">GALLERY</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Materials.html">MATERIALS</a>
+          </li>
+        </ul>
       </div>
     </nav>
+    <section class="header">
+        
+      <div class="text-box">
+          <h1>Moot court and competitions</h1>
+          <p class="header-text text-md">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim
+            praesent elementum facilisis leo vel fringilla est ullamcorper eget.
+            Placerat orci nulla pellentesque dignissim enim sit amet venenatis.
+            Lorem sed risus ultricies tristique. Sagittis vitae et leo duis ut
+            diam. Aliquet nec ullamcorper sit amet risus nullam eget felis. Nisl
+            nisi scelerisque eu ultrices vitae auctor. Est ante in nibh mauris.
+            Tempus imperdiet nulla malesuada pellentesque elit eget gravida.
+            Quam id leo in vitae. Vitae semper quis lectus nulla. Pretium
+            vulputate sapien nec sagittis. Volutpat commodo sed egestas egestas
+            fringilla phasellus faucibus scelerisque. Urna porttitor rhoncus
+            dolor purus non enim praesent. Diam quis enim lobortis scelerisque
+            fermentum dui.
+          </p>
+      </div>   
+  </section>
     <!-- Header -->
     <section class="mootcourt">
       <div class="container ">
