--- a/hulsa/Blog.html
+++ b/hulsa/Blog.html
@@ -107,7 +107,6 @@
     </div>
   </div>
 </div>
-
 <main role="main" class="container">
   <div class="row">
     <div class="col-md-8 blog-main">
@@ -234,7 +233,7 @@
     </ul>
   </footer>
 </div>
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
 <script src="../../assets/js/vendor/popper.min.js"></script>
 <script src="../../dist/js/bootstrap.min.js"></script>
@@ -245,6 +244,6 @@
     fg: '#eceeef',
     text: 'Thumbnail'
   });
-</script> -->
+</script>
 </body>
 </html>
