--- a/hulsa/Resources.html
+++ b/hulsa/Resources.html
@@ -195,6 +195,6 @@
     ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="resource.js"></script>
+    <script src="js/resource.js"></script>
   </body>
 </html>
