--- a/hulsa/Blog.html
+++ b/hulsa/Blog.html
@@ -58,7 +58,7 @@
     <div class="container-sm">
       <div class="header-content">
         <h1 class="heading text-xl">HULSA Blog Post</h1>
-        <p class="header-text text-md">
+        <p class="header-text text-sm">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim
           praesent elementum facilisis leo vel fringilla est ullamcorper eget.
@@ -70,13 +70,19 @@
 
 
   <div class="main-blog-post">
-    <div class="jumbotron p-3 p-md-5 text-black rounded bg-white">
-      <div class=" main-blog-post-text col-md-6 px-0">
-        <h1 class="text-xxl font-italic">Title of a longer featured blog post</h1>
-        <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
-        <p class="lead mb-0"><a href="#" class="text-black font-weight-bold">Continue reading...</a></p>
-      </div>
-    </div>
+       <div class="main-blog-post-text">
+        <h1 class="text-xxl">Featured Blog Post</h1>
+        <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+           Commodo ullamcorper a lacus vestibulum sed arcu non odio euismod. 
+           Orci a scelerisque purus semper. Egestas integer eget aliquet nibh praesent tristique magna sit amet.
+            Vel quam elementum pulvinar etiam non quam lacus. Diam maecenas sed enim ut. Vel fringilla est
+             ullamcorper eget nulla facilisi etiam dignissim diam. Lectus urna duis convallis convallis tellus id. 
+             Pellentesque massa placerat duis ultricies lacus sed. Arcu non odio euismod lacinia at quis risus sed vulputate
+             <a>Continue reading...</a>
+             .</p>
+       </div> 
+
     <div class="main-blog-post-img">
       <img src="images/3.jpeg" alt="">
     </div>
