--- a/hulsa/Blog.html
+++ b/hulsa/Blog.html
@@ -79,7 +79,7 @@
             Vel quam elementum pulvinar etiam non quam lacus. Diam maecenas sed enim ut. Vel fringilla est
              ullamcorper eget nulla facilisi etiam dignissim diam. Lectus urna duis convallis convallis tellus id. 
              Pellentesque massa placerat duis ultricies lacus sed. Arcu non odio euismod lacinia at quis risus sed vulputate
-             <a>Continue reading...</a>
+             <a href="#">Continue reading...</a>
              .</p>
        </div> 
 
